Get things mostly working - however, we have a classloader problem when using Jackson that shows up randomly when running against some projects but not others.