@@ -36,7 +36,7 @@
     </properties>
 
     <dependencies>
-
+        
         <!-- Cactus -->
 
         <dependency>
@@ -88,6 +88,9 @@
             <artifactId>maven-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Testing -->
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -108,11 +111,13 @@
     <build>
         <plugins>
 
-            <plugin>
+            <!-- Keeping these in case we re-modularize -->
+            
+<!--            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-reads</arg>
+                        <arg>- -add-reads</arg>
                         <arg>cactus.maven.plugin=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
@@ -123,9 +128,9 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
-                    <additionalOptions>--add-reads cactus.maven.plugin=ALL-UNNAMED</additionalOptions>
+                    <additionalOptions>- -add-reads cactus.maven.plugin=ALL-UNNAMED</additionalOptions>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
             <plugin>
 
